# vix

./: .gitignore  .pre-commit-config.yaml  README.md  README.rst  pyproject.toml  readme.rst  requirements.txt  setup.py
data/: options.csv  yields.csv
docs/: Makefile
docs/source/: conf.py  index.rst
notebooks/: Replicate_VIXwite.ipynb
src/vix/: reproduce_vix.py
vix/: VIX_term_structure2.py  VIX_term_structure_test.py  raw_sigma.py  reproduce_vix.py
