[project]
name = "vix"
description = "VIX and related volatility indices"
authors = [{ name = "Stanislav Khrapov", email = "khrapovs@gmail.com" }]
readme = "README.md"
classifiers = [
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.10"
dependencies = ["pandas", "jupyterlab", "pre-commit>=4.0.1"]
dynamic = ["version"]

[project.urls]
Source = "https://github.com/khrapovs/vix"

[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[tool.ruff]
line-length = 120
src = ["notebooks"]

[tool.ruff.lint]
select = ["E", "F", "D", "B", "I", "ARG"]
ignore = [
  "D100",
  "D101",
  "D102",
  "D103",
  "D104",
  "D105",
  "D106",
  "D107",
  "D213",
  "D417",
]

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
